--- a/.gitignore
+++ b/.gitignore
@@ -27,10 +27,14 @@ yarn-error.log*
 
 # local env files
 .env*.local
-
+.env
+.env.local
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# custom 
+drizzle.config.js
