--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "drizzle-kit push",
+    "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.7.2",
+    "@clerk/themes": "^2.1.35",
     "@neondatabase/serverless": "^0.10.1",
     "@radix-ui/react-icons": "^1.3.0",
     "class-variance-authority": "^0.7.0",
