--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@clerk/themes": "^2.1.35",
     "@neondatabase/serverless": "^0.10.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.34.1",
